src/isla/bnf/bnfParser.py
# Generated from bnf.g4 by ANTLR 4.13.0
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class bnfParser ( Parser ):

    grammarFileName = "bnf.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'::='", "'|'", "';'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "NONTERMINAL", "STRING", "ESC", "WS", "LINE_COMMENT" ]

    RULE_bnf_grammar = 0
    RULE_derivation_rule = 1
    RULE_alternative = 2

    ruleNames =  [ "bnf_grammar", "derivation_rule", "alternative" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    NONTERMINAL=4
    STRING=5
    ESC=6
    WS=7
    LINE_COMMENT=8

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.0")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class Bnf_grammarContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def derivation_rule(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(bnfParser.Derivation_ruleContext)
            else:
                return self.getTypedRuleContext(bnfParser.Derivation_ruleContext,i)


        def getRuleIndex(self):
            return bnfParser.RULE_bnf_grammar

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBnf_grammar" ):
                listener.enterBnf_grammar(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBnf_grammar" ):
                listener.exitBnf_grammar(self)




    def bnf_grammar(self):

        localctx = bnfParser.Bnf_grammarContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_bnf_grammar)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 7 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 6
                self.derivation_rule()
                self.state = 9 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==4):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Derivation_ruleContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NONTERMINAL(self):
            return self.getToken(bnfParser.NONTERMINAL, 0)

        def alternative(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(bnfParser.AlternativeContext)
            else:
                return self.getTypedRuleContext(bnfParser.AlternativeContext,i)


        def getRuleIndex(self):
            return bnfParser.RULE_derivation_rule

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDerivation_rule" ):
                listener.enterDerivation_rule(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDerivation_rule" ):
                listener.exitDerivation_rule(self)




    def derivation_rule(self):

        localctx = bnfParser.Derivation_ruleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_derivation_rule)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 11
            self.match(bnfParser.NONTERMINAL)
            self.state = 12
            self.match(bnfParser.T__0)
            self.state = 13
            self.alternative()
            self.state = 18
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==2:
                self.state = 14
                self.match(bnfParser.T__1)
                self.state = 15
                self.alternative()
                self.state = 20
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 22
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==3:
                self.state = 21
                self.match(bnfParser.T__2)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AlternativeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self, i:int=None):
            if i is None:
                return self.getTokens(bnfParser.STRING)
            else:
                return self.getToken(bnfParser.STRING, i)

        def NONTERMINAL(self, i:int=None):
            if i is None:
                return self.getTokens(bnfParser.NONTERMINAL)
            else:
                return self.getToken(bnfParser.NONTERMINAL, i)

        def getRuleIndex(self):
            return bnfParser.RULE_alternative

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAlternative" ):
                listener.enterAlternative(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAlternative" ):
                listener.exitAlternative(self)




    def alternative(self):

        localctx = bnfParser.AlternativeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_alternative)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 25 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 24
                    _la = self._input.LA(1)
                    if not(_la==4 or _la==5):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()

                else:
                    raise NoViableAltException(self)
                self.state = 27 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,3,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





